[package]
name = "rust_tag"
version = "0.1.0"
authors = ["Alfred <alfredmountfield@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3.4"

[dependencies]
rand = "0.8.4"
minifb = "0.19.3"
nonmax = "0.5.0"

[[bench]]
name = "update"
harness = false